# catalogador_inteligente

./: .gitattributes  .gitignore  README.md
backend/: ai_service.py  database.py  export_service.py  main.py  sha256_computer.py  test_tree.py
data/: catalog.db
engine/: Cargo.toml  build_log.txt  test.db
engine/src/: db.rs  main.rs  models.rs  scanner.rs
frontend/: app.js  index.html  styles.css
