[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4"
rayon = "1.8"
md5 = { package = "md-5", version = "0.10" }
sha2 = "0.10"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
